--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
+  background-color: #333;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  background-color: gray;
+  margin: 0 auto;
+  width: 1080px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  padding: 0 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  width: 1040px;
+  height: 50px;
+  border-bottom: 1px solid black;
+}
+.centerContainer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  margin: 20px;
+  text-align: center;
+  background-color: #bbb;
+}
+.startButton {
+  margin: 20px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: skyblue;
 }
 
-.App-link {
-  color: #61dafb;
+.paragraphContainer {
+  margin: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  background-color: #bbb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.paragraphTitle {
+  padding-top: 10px;
+  font-size: 20pt;
+}
+.paragraphText {
+  font-size: 15pt;
+  background-color: white;
+  height: 400px;
+  padding: 0;
+  width: 1000px;
+  border-radius: 10px;
+}
+h1,
+p {
+  padding: 0;
+  margin: 0;
+  line-height: 1.5;
 }
