--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ header {
   height: 50px;
   border-bottom: 1px solid black;
 }
-.centerContainer {
+.center_container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,24 +24,24 @@ header {
   text-align: center;
   background-color: #bbb;
 }
-.startButton {
+.start_button {
   margin: 20px;
   height: 50px;
   border-radius: 10px;
   background-color: skyblue;
 }
 
-.paragraphContainer {
+.paragraph_container {
   margin: 20px;
   padding-left: 20px;
   padding-bottom: 20px;
   background-color: #bbb;
 }
-.paragraphTitle {
+.paragraph_title {
   padding-top: 10px;
   font-size: 20pt;
 }
-.paragraphText {
+.paragraph_text {
   font-size: 15pt;
   background-color: white;
   height: 400px;
