--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,8 +1,6 @@
-.App {
-  background-color: #333;
-}
+
 .container {
-  background-color: gray;
+  background-color: #EEF1FF;
   margin: 0 auto;
   width: 1080px;
 }
@@ -22,20 +20,20 @@ header {
   flex-direction: column;
   margin: 20px;
   text-align: center;
-  background-color: #bbb;
+  
 }
 .start_button {
   margin: 20px;
   height: 50px;
   border-radius: 10px;
-  background-color: skyblue;
+  background-color: #B1B2FF;
 }
 
 .paragraph_container {
   margin: 20px;
   padding-left: 20px;
   padding-bottom: 20px;
-  background-color: #bbb;
+  
 }
 .paragraph_title {
   padding-top: 10px;
@@ -54,4 +52,14 @@ p {
   padding: 0;
   margin: 0;
   line-height: 1.5;
+}
+
+.title{
+  font-size: 30pt;
+  color: purple;
+}
+
+.logo{
+  margin-top: 30px;
+  width: 400px;
 }
