Feat: Input Disabled, Input Focus

--- a/src/pages/TypingPage/index.css
+++ b/src/pages/TypingPage/index.css
@@ -1,10 +1,12 @@
 
 .typing_container {
     overflow: hidden;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid #B1B2FF;
+    border-top: none;
     margin: 0 auto;
     width: 1080px;
     height: 90vh;
@@ -18,9 +20,7 @@
     width: 40px;
     height: 40px;
     border-radius: 10px;   
-    box-shadow: 2px 2px 3px 2px #B1B2FF;
-    
-    
+    box-shadow: 2px 2px 3px 2px #B1B2FF;    
 }
 
 
@@ -46,6 +46,11 @@ input[type="text"]{
     height: 30px;
     margin: 50px;
 }
+input[type="text"]:disabled{
+  filter: brightness(0.9);
+  cursor:text;
+}
+
 .keyboard.active {
     animation-name: blink;
     animation-duration: 0.3s;
@@ -56,13 +61,19 @@ input[type="text"]{
     from { background-color: #8468FA; }
   }
 #start_typing_button{
-    background-color: #EEF1FF;
-    border: 1px solid #B1B2FF;
-    width: 200px;
-    height: 30px;
-    border-radius: 10px;
-    cursor: pointer;
-    
+  margin: 20px;
+  width: 250px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #D0D0FF;
+  border: none;
+  color: #293677;
+  font-size: 15pt;
+  cursor: pointer;  
+}
+
+#start_typing_button:hover{
+  filter: brightness(0.9);
 }
 
 
