--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,4 +1,5 @@
 * {
+  margin: 0;
   font-family: "Montserrat", sans-serif;
   color: #293677;
 }
@@ -8,7 +9,6 @@
   width: 1080px;
   height: 2000px;
 }
-
 header {
   padding: 0 20px;
   display: flex;
@@ -28,6 +28,7 @@ header {
 .header_logo {
   width: 80px;
 }
+
 .center_container {
   display: flex;
   justify-content: center;
