--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -1,5 +1,7 @@
 .page-wrapper {
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,34 +29,33 @@
   margin-bottom: 10px;
 }
 
-.profile-container {
+.avatar-container {
   margin: 0 auto;
   text-align: center;
 }
 
-.profile-imageBox {
+.avatar-imageBox {
   width: 100px;
   height: 100px;
   border: 1px solid black;
-  background-color: #eef1ff;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto;
 }
 
-.profile-image {
+.avatar-image {
   width: 100%;
   height: 100%;
 }
 
-.profile-label-wrapper {
+.avatar-label-wrapper {
   margin-top: 10px;
 }
 
-.profile-label {
+.avatar-label {
   color: #293677;
 }
-.profile-label:hover {
+.avatar-label:hover {
   cursor: pointer;
 }
 
