--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -10,13 +10,11 @@
   height: 2000px;
 }
 header {
-  padding: 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 1040px;
+  width: 1080px;
   height: 50px;
-
   border: 1px solid #b1b2ff;
   background-color: #eef1ff;
   position: fixed;
@@ -27,6 +25,7 @@ header {
 
 .header_logo {
   width: 80px;
+  margin-left: 20px;
 }
 
 .center_container {
@@ -70,8 +69,8 @@ header {
   width: 1000px;
   border-radius: 10px;
 }
-h1,
-p {
+
+.paragraph_items {
   padding: 0;
   margin: 0;
   line-height: 1.5;
@@ -89,6 +88,7 @@ p {
 
 .nav {
   margin-top: 3px;
+  margin-right: 20px;
   display: flex;
   font-size: 10.5pt;
   justify-content: space-between;
