Feat: 임시 userInfoInput 구현 완료 #4

--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -29,8 +29,13 @@
   margin-bottom: 10px;
 }
 
+.header-title {
+  margin-bottom: 15px;
+}
+
 .avatar-container {
   margin: 0 auto;
+  padding-top: 15px;
   text-align: center;
 }
 
