--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -88,7 +88,7 @@
   background-color: #b1b2ff;
   border: none;
   color: #293677;
-  font-size: 15pt;
+  font-size: 1rem;
 }
 
 .submit_button:hover {
