Feat: header logo 클릭 시 MainPage 이동

--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #293677;
 }
 
@@ -27,6 +27,7 @@ header {
 .header_logo {
   width: 6vw;
   margin-left: 1.5vw;
+  cursor: pointer;
 }
 
 .main_page_logo {
