--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #293677;
 }
 
@@ -22,6 +22,7 @@ header {
   top: 0;
   left: 50%;
   transform: translate(-50%);
+  box-sizing: border-box;
 }
 
 .header_logo {
@@ -51,7 +52,7 @@ header {
   background-color: #b1b2ff;
   border: none;
   color: #293677;
-  font-size: 1rem;
+  font-size: 1.3vw;
 }
 
 .start_button:hover {
@@ -67,7 +68,7 @@ header {
 
 .paragraph_title {
   padding-top: 1.5vh;
-  font-size: 2rem;
+  font-size: 2vw;
 }
 
 .paragraph_text {
@@ -87,17 +88,15 @@ header {
 
 .nav {
   margin-top: 0.2vh;
-  margin-right: 1.5vw;
+  margin-right: 2vw;
   display: flex;
-  font-size: 0.8rem;
-  justify-content: space-between;
-  width: 100px;
+  font-size: 1.5vw;
+  justify-content: space-around;
+  width: 25vw;
 }
 
 .nav_items {
-  width: 50px;
   cursor: pointer;
-  margin-right: 5px;
 }
 
 .scroll_items {
