--- a/src/pages/TypingPage/index.css
+++ b/src/pages/TypingPage/index.css
@@ -1,27 +1,29 @@
-.typingPage-wrapper {
+.typingPage_wrapper {
   width: 100vw;
   height: 100vh;
 }
+
 .typing_container {
   width: 85vw;
-  border: 1px solid #b1b2ff;
   border-top: none;
   margin: 0 auto;
 }
 
 .body-wrapper {
-  width: 85vw;
+  border: 1px solid #b1b2ff;
+  width: 100%;
   display: flex;
+  box-sizing: border-box;
 }
 
 .left-container {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 80%;
   height: 100%;
   border-right: 1px solid #b1b2ff;
+
   text-align: center;
 }
 
