--- a/src/components/SelectCategoryModal/index.css
+++ b/src/components/SelectCategoryModal/index.css
@@ -23,31 +23,22 @@
 }
 
 .category_wrapper {
-  width: 400px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-top: 20px;
-  border: 2px solid #b1b2ff;
-  border-radius: 10px;
-}
-
-.category_list {
-  width: 350px;
-  list-style: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  padding: 5px;
+  width: 350px;
+  height: 220px;
+  border: 2px solid #b1b2ff;
+  border-radius: 10px;
   align-items: flex-start;
-  padding: 10px;
 }
-.category_list_item {
+
+.category_item {
   padding: 10px;
   text-align: center;
   background-color: inherit;
-}
-
-.category_list_item:hover {
   cursor: pointer;
 }
 
@@ -55,7 +46,7 @@
   font-weight: bold;
 }
 
-.modal_close_button {
+.modal_start_button {
   width: 80px;
   height: 40px;
   border: 3px solid #b1b2ff;
@@ -66,8 +57,5 @@
   margin: 20px;
   padding: 6px;
   text-align: center;
-}
-
-.modal_close_button:hover {
   cursor: pointer;
 }
