--- a/src/components/SelectCategoryModal/index.css
+++ b/src/components/SelectCategoryModal/index.css
@@ -17,6 +17,9 @@
   border-radius: 10px;
   color: #b1b2ff;
   cursor: pointer;
+  &.active {
+    border: 2px solid #b1b2ff;
+  }
 }
 
 .category_wrapper {
@@ -36,6 +39,8 @@
   padding: 10px;
   text-align: center;
   background-color: inherit;
+  width: inherit;
+  text-align: left;
   cursor: pointer;
 }
 
