--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -55,9 +55,10 @@
 .name_input {
   width: 200px;
   height: 30px;
-  border: 1px solid #b1b2ff;
+  border: 1.5px solid #293677;
   border-radius: 15px;
   text-align: center;
+  outline: none;
 }
 
 .submit_button {
