Fix: keyboard_input 크기 30vw로 변경

--- a/src/components/VirtualKeyboard/index.css
+++ b/src/components/VirtualKeyboard/index.css
@@ -36,7 +36,7 @@
 .keyboard_input {
   border: 1px solid #b1b2ff;
   outline: none;
-  width: 500px;
+  width: 30vw;
   height: 5vh;
   font-size: 1rem;
   margin-bottom: 2vh;
