--- a/src/components/SelectCategoryModal/index.css
+++ b/src/components/SelectCategoryModal/index.css
@@ -32,7 +32,6 @@
   height: 220px;
   border: 2px solid #b1b2ff;
   border-radius: 10px;
-  align-items: flex-start;
 }
 
 .category_item {
@@ -54,7 +53,7 @@
   border: 3px solid #b1b2ff;
   background-color: white;
   color: #b1b2ff;
-  font-size: 20px;
+  font-size: 1.2rem;
   margin: 20px;
   padding: 6px;
   text-align: center;
