--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -35,6 +35,7 @@
   margin: 0 auto;
   &.active {
     border: 2px solid #b1b2ff;
+    background-color: #b1b2ff;
   }
 }
 
@@ -65,5 +66,6 @@
   margin: 40px 0 0;
   width: 80px;
   height: 40px;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  color: white;
 }
