--- a/src/pages/TypingPage/MainSection/index.css
+++ b/src/pages/TypingPage/MainSection/index.css
@@ -3,9 +3,10 @@
   height: 100vh;
   border-top: none;
   margin: 0 auto;
-  border: 1px solid #b1b2ff;
+  border: 2px solid #b1b2ff;
   display: flex;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  min-width: 800px;
 }
 
 .left_container {
@@ -13,14 +14,8 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
-  border-right: 1px solid #b1b2ff;
+  border-right: 2px solid #b1b2ff;
   text-align: center;
-}
-
-.typing_page_logo {
-  margin-top: 10vh;
-  width: 30vw;
-  margin-bottom: 5vh;
 }
 
 .right_container {
