Refactor: page, avatar component border 수정

--- a/src/pages/MainPage/MainSection/index.css
+++ b/src/pages/MainPage/MainSection/index.css
@@ -1,8 +1,9 @@
 .main_page_main {
-  border: 2px solid #b1b2ff;
+  border: 0.12vw solid #b1b2ff;
   margin: 0 auto;
   width: 85vw;
   min-width: 800px;
+  box-sizing: border-box;
 }
 
 .upper_container {
