--- a/src/components/UserInfo/index.css
+++ b/src/components/UserInfo/index.css
@@ -25,7 +25,7 @@
 .avatar_imageBox_selected {
   width: 120px;
   height: 120px;
-  border: 1px solid #293677;
+  border: 0.12vw solid #b1b2ff;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto;
