Style: Mainpage header, Typingpage right-container 요소 css 수정

--- a/src/components/TypingResultsContainer/index.css
+++ b/src/components/TypingResultsContainer/index.css
@@ -3,7 +3,7 @@
   width: 90%;
   height: 40%;
   text-align: center;
-  padding: 2px;
+  padding: 0;
 }
 
 .result_container {
@@ -31,27 +31,27 @@
   width: 90%;
   height: 40%;
   text-align: center;
-  padding: 2px;
 }
 
 .result_container {
   border: 1px solid #b1b2ff;
   border-radius: 10px;
-  margin: 20px 0;
+  margin: 35px 0;
   overflow: hidden;
   font-size: 15px;
+  box-shadow: 2px 1px 2px 1px #b1b2ff;
 }
 
 .result_title {
   margin: 0;
-  padding: 3px;
+  padding: 7px;
   background-color: #eef1ff;
 }
 
 .result_value {
   overflow: hidden;
   margin: 0;
-  padding: 3px;
+  padding: 7px;
 
   border-top: 1px solid #b1b2ff;
 }
