--- a/src/pages/MainPage/HeaderSection/index.css
+++ b/src/pages/MainPage/HeaderSection/index.css
@@ -1,7 +1,7 @@
 .navigation_item {
+  width: 16vw;
   display: flex;
-  margin-right: 20px;
-  font-size: 15px;
-  column-gap: 10px;
+  font-size: 1.2vw;
+  column-gap: 2vw;
   cursor: pointer;
 }
