--- a/src/pages/MainPage/MainSection/index.css
+++ b/src/pages/MainPage/MainSection/index.css
@@ -1,5 +1,5 @@
 .main_page_main {
-  border: 0.12vw solid #b1b2ff;
+  border: 2px solid #b1b2ff;
   margin: 0 auto;
   width: 85vw;
   min-width: 800px;
