Feat: 낱말연습용 JSON 추가 Style: UserInfoInputModal Avatar Style 변경

--- a/src/components/UserInfoInputModal/index.css
+++ b/src/components/UserInfoInputModal/index.css
@@ -40,7 +40,7 @@
 
 .avatar_imageBox:hover {
   cursor: pointer;
-  border: 2px solid #b1b2ff;
+  filter: brightness(1.1);
 }
 
 .avatar_image {
@@ -48,7 +48,9 @@
   height: 110%;
   -webkit-user-drag: none;
 }
-
+.avatar_imageBox:active {
+  filter: brightness(1);
+}
 .name_label {
   color: #293677;
 }
