--- a/src/components/SelectCategoryModal/index.css
+++ b/src/components/SelectCategoryModal/index.css
@@ -56,10 +56,12 @@
   cursor: pointer;
 }
 
+.category_item:focus {
+  background-color: rgb(177, 178, 255, 0.2);
+}
 .category_item:hover {
   background-color: rgb(177, 178, 255, 0.2);
 }
-
 .category_item:active {
   /* background-color: rgb(177, 178, 255, 0.2); */
   color: #293677;
