Feat: landingPage AboutUs 화면 구현

--- a/src/pages/MainPage/MainSection/index.css
+++ b/src/pages/MainPage/MainSection/index.css
@@ -12,6 +12,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-bottom: 8vh;
+}
+
+.main_page_logo {
+  margin: 14vh 0 5vh;
+  width: 32vw;
+  min-width: 300px;
 }
 
 .start_button {
