Feat:typing 종료 후 tying results localStorage 저장(진행시간 제외) #43

--- a/src/pages/TypingPage/MainSection/index.css
+++ b/src/pages/TypingPage/MainSection/index.css
@@ -20,6 +20,14 @@
 }
 
 .right_container {
+  text-align: center;
   width: 20%;
   padding-top: 12vh;
+}
+
+.statistics_button {
+  margin-top: 20px;
+  color: white;
+  width: 90%;
+  height: 35px;
 }
