--- a/src/components/TypingStatisticsModal/index.css
+++ b/src/components/TypingStatisticsModal/index.css
@@ -1,11 +1,19 @@
-.statistics_table {
-  margin-top: 0;
+.statistics_wrapper {
   width: 100%;
+  height: 500px;
+  overflow: scroll;
+}
+
+.statistics_table {
+  margin: 0 auto;
+  font-size: 10pt;
   border-collapse: collapse;
+  border-spacing: 10px;
 }
 
 .statistics_table th,
 .statistics_table td {
+  width: 20%;
   padding: 12px;
   text-align: center;
   border-bottom: 1px solid #ddd;
