Feat: landingPage AboutUs 수정, Proposal 화면 구현

--- a/src/pages/MainPage/MainSection/index.css
+++ b/src/pages/MainPage/MainSection/index.css
@@ -49,3 +49,9 @@
   overflow-y: scroll;
   padding-right: 1vw;
 }
+
+.copyrights {
+  text-align: center;
+  padding-bottom: 5px;
+  letter-spacing: 1px;
+}
