--- a/src/pages/MainPage/Proposal/index.css
+++ b/src/pages/MainPage/Proposal/index.css
@@ -1,3 +1,62 @@
-.container {
-  height: 60vh;
+.proposal_container {
+  height: 40vh;
+}
+
+.proposal_section {
+  width: 700px;
+  height: 20vh;
+  border: 1px solid #b1b2ff;
+  box-shadow: 1px 1px 2px 1px #b1b2ff;
+  border-radius: 10px;
+}
+
+.introduction_section {
+  margin-bottom: 30px;
+}
+
+.feature_section {
+  height: 35vh;
+}
+
+.section_title {
+  font-size: 1.4vw;
+  background-color: #b1b2ff;
+  border: 1px solid #b1b2ff;
+  border-radius: 10px;
+  box-shadow: 1px 1px 2px 1px #8e8faa;
+  color: white;
+  padding: 6px 10px;
+  margin: -10px;
+  z-index: 1;
+}
+
+.section_main {
+  margin: 10px;
+  padding: 10px;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.section_main_content {
+  margin: 5px 0px;
+  font-size: 20px;
+}
+
+.main_title {
+  font-weight: 600;
+}
+
+.feature_list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  line-height: 1.8;
+}
+
+@media (max-width: 600px) or (max-height: 600px) {
+  .proposal_section {
+    width: 600px;
+    height: 200px;
+    overflow: auto;
+  }
 }
