--- a/src/components/TypingStatisticsModal/index.css
+++ b/src/components/TypingStatisticsModal/index.css
@@ -5,11 +5,13 @@
 .statistics_wrapper {
   margin: 0 auto;
   width: 100%;
-  height: 500px;
+  height: 80%;
+  padding-top: 0;
   overflow: scroll;
 }
 
 .statistics_table {
+  width: 100%;
   margin: 10px auto;
   font-size: 10pt;
   border-collapse: collapse;
@@ -18,19 +20,40 @@
 
 .statistics_table th,
 .statistics_table td {
-  width: 18%;
   padding: 12px;
   text-align: center;
   border-bottom: 1px solid #ddd;
 }
 
 .statistics_table th {
-  width: 18%;
   background-color: #eef1ff;
   font-weight: bold;
   color: #333;
 }
 
-/* tbody tr:nth-child(3) {
-  width: 100px;
-} */
+.statistics_table th:nth-child(2) {
+  width: 150px;
+}
+.statistics_table th:nth-child(3),
+.statistics_table th:nth-child(4),
+.statistics_table th:nth-child(6) {
+  width: 80px;
+}
+
+.text_wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #aba8a8;
+}
+
+button.inactive {
+  color: #ddd;
+  background-color: #aba8a8;
+  cursor: not-allowed;
+}
+button.inactive:hover {
+  filter: initial;
+}
