--- a/src/components/UserInfo/index.css
+++ b/src/components/UserInfo/index.css
@@ -16,6 +16,7 @@
   background-color: #eef1ff;
   box-shadow: 2px 1px 2px 1px #b1b2ff;
   text-align: center;
+  cursor: pointer;
 }
 
 .user_name {
@@ -29,4 +30,11 @@
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto;
+}
+.user_info_input {
+  border: none;
+  outline: none;
+  background-color: inherit;
+  width: inherit;
+  text-align: center;
 }
