--- a/src/components/WithoutContext/UserInfo/index.css
+++ b/src/components/WithoutContext/UserInfo/index.css
@@ -4,6 +4,15 @@
   margin: 0 auto;
 }
 
+.avatar_imageBox_selected {
+  width: 120px;
+  height: 120px;
+  border: 1.5px solid #293677;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
 .user_name_wrapper {
   display: flex;
   justify-content: center;
@@ -20,21 +29,15 @@
 }
 
 .user_name {
+  width: 150px;
   font-size: 1rem;
 }
 
-.avatar_imageBox_selected {
-  width: 120px;
-  height: 120px;
-  border: 1.5px solid #293677;
-  border-radius: 50%;
-  overflow: hidden;
-  margin: 0 auto;
-}
-.user_info_input {
+.user_name_input {
+  width: 150px;
+  font-size: 1rem;
   border: none;
   outline: none;
   background-color: inherit;
-  width: inherit;
   text-align: center;
 }
