--- a/src/components/WithoutContext/TypingStatisticsModal/index.css
+++ b/src/components/WithoutContext/TypingStatisticsModal/index.css
@@ -10,6 +10,12 @@
   overflow: scroll;
 }
 
+.button_wrapper {
+  display: flex;
+  width: 300px;
+  justify-content: space-around;
+}
+
 .statistics_table {
   width: 100%;
   margin: 10px auto;
