--- a/src/components/AcidRain/AcidRainStatisticsModal/index.css
+++ b/src/components/AcidRain/AcidRainStatisticsModal/index.css
@@ -3,25 +3,29 @@
   width: 100%;
   height: 80%;
   padding-top: 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
-.statistics_table {
+.acid_rain_statistics_table {
   width: 100%;
-  margin: 10px auto;
+  margin-top: 50px;
   font-size: 10pt;
   border-collapse: collapse;
   border-spacing: 10px;
+  max-height: 500px; /* Set a max height */
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
-.statistics_table th,
-.statistics_table td {
+.acid_rain_statistics_table th,
+.acid_rain_statistics_table td {
+  width: 150px;
   padding: 12px;
   text-align: center;
   border-bottom: 1px solid #ddd;
+  white-space: nowrap;
 }
 
-.statistics_table th {
+.acid_rain_statistics_table th {
   background-color: #eef1ff;
   font-weight: bold;
   color: #333;
@@ -46,5 +50,24 @@ button.inactive:hover {
 }
 
 .acid_rain_statistics_title {
+  position: absolute;
+  top: 10px;
   font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.acid_rain_statistics_modal {
+  position: fixed;
+  border: 3px solid #b1b2ff;
+  border-radius: 10px;
+  background-color: #eef1ff;
+  width: 550px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  font-weight: 500;
+  justify-content: center;
+  text-align: center;
 }
