--- a/src/pages/MainPage/AboutUs/index.css
+++ b/src/pages/MainPage/AboutUs/index.css
@@ -7,6 +7,12 @@
   min-width: 300px;
 }
 
+.about_us_info {
+  width: 100%;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
 .developer_info_wrapper {
   width: 90%;
   margin: 1px;
