--- a/src/components/AcidRain/AcidRainModal/index.css
+++ b/src/components/AcidRain/AcidRainModal/index.css
@@ -40,7 +40,7 @@
 .acid_rain_title {
   font-size: 60px;
   cursor: pointer;
-  margin-top: 150px;
+  margin-top: 5vh;
   margin-bottom: 0;
 }
 
@@ -85,7 +85,7 @@
   font-size: 1.5rem;
   height: 50px;
   width: 200px;
-  margin-bottom: 80px;
+  margin-bottom: 5vh;
 }
 
 .level_button {
