--- a/src/components/WithContext/TypingResultsContainer/index.css
+++ b/src/components/WithContext/TypingResultsContainer/index.css
@@ -1,42 +1,22 @@
 .typingResult_Wrapper {
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
   width: 90%;
   height: 40%;
   text-align: center;
   padding: 0;
+  min-height: 180px;
 }
 
 .result_container {
-  border: 1px solid #b1b2ff;
-  border-radius: 10px;
-  margin: 30px 0;
-  overflow: hidden;
-  font-size: 15px;
-}
-
-.result_title {
-  margin: 0;
-  padding: 7px;
-  background-color: #eef1ff;
-}
-
-.result_value {
-  overflow: hidden;
-  margin: 0;
-  padding: 7px;
-  border-top: 1px solid #b1b2ff;
-}
-.typingResult_Wrapper {
-  margin: 0 auto;
   width: 90%;
-  height: auto;
-  text-align: center;
-}
-
-.result_container {
   border: 1px solid #b1b2ff;
   border-radius: 10px;
-  margin: 35px 0;
+  margin-top: 10px;
   overflow: hidden;
   font-size: 15px;
   box-shadow: 2px 1px 2px 1px #b1b2ff;
@@ -52,6 +32,5 @@
   overflow: hidden;
   margin: 0;
   padding: 7px;
-
   border-top: 1px solid #b1b2ff;
 }
