--- a/src/components/WithoutContext/UserInfo/index.css
+++ b/src/components/WithoutContext/UserInfo/index.css
@@ -1,6 +1,11 @@
-.profile_container {
+.userInfo_wrapper {
   width: 100%;
-  height: 40%;
+  height: 20%;
+}
+
+.profile_container {
+  width: 80%;
+  height: 20%;
   margin: 0 auto;
 }
 
