--- a/src/components/WithoutContext/UserInfo/index.css
+++ b/src/components/WithoutContext/UserInfo/index.css
@@ -24,7 +24,7 @@
   align-items: center;
   margin: 10px auto;
   width: 100%;
-  height: 4vh;
+  height: 30px;
   border: 1px solid #b1b2ff;
   border-radius: 10px;
   background-color: #eef1ff;
