Feat: level button 모달 다른곳 클릭해도 다시  focus

--- a/src/components/AcidRain/AcidRainModal/index.css
+++ b/src/components/AcidRain/AcidRainModal/index.css
@@ -175,5 +175,7 @@
 .acid_rain_exit_button {
   position: absolute;
   top: 15px;
-  right: 15px;
+  right: 20px;
+  width: 30px;
+  cursor: pointer;
 }
