--- a/src/components/AcidRain/AcidRainModal/index.css
+++ b/src/components/AcidRain/AcidRainModal/index.css
@@ -174,6 +174,8 @@
 
 .acid_rain_exit_button {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 5px;
+  right: 10px;
+  width: 50px;
+  cursor: pointer;
 }
