Refactor: close button 추가, 한/영 통일

--- a/src/components/WithoutContext/TypingStatisticsModal/index.css
+++ b/src/components/WithoutContext/TypingStatisticsModal/index.css
@@ -80,3 +80,9 @@ button.inactive {
 button.inactive:hover {
   filter: initial;
 }
+
+.modal_button_wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
