--- a/src/components/AcidRain/AcidRainStatisticsModal/index.css
+++ b/src/components/AcidRain/AcidRainStatisticsModal/index.css
@@ -71,3 +71,9 @@ button.inactive:hover {
   justify-content: center;
   text-align: center;
 }
+
+.modal_button_wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
