--- a/src/global.css
+++ b/src/global.css
@@ -45,6 +45,11 @@ button:active {
   color: white;
 }
 
+.modal_button {
+  margin: 0 10px;
+  color: white;
+}
+
 .modal {
   position: fixed;
   border: 3px solid #b1b2ff;
