--- a/src/components/WithoutContext/UserInfo/index.css
+++ b/src/components/WithoutContext/UserInfo/index.css
@@ -24,7 +24,7 @@
   align-items: center;
   margin: 10px auto;
   width: 100%;
-  height: 4vh;
+  height: 30px;
   border: 1px solid #b1b2ff;
   border-radius: 10px;
   background-color: #eef1ff;
@@ -33,13 +33,17 @@
   cursor: pointer;
 }
 
+.user_name_wrapper:hover {
+  background-color: #dde3fd;
+}
+
 .user_name {
   width: 150px;
   font-size: 1rem;
 }
 
 .user_name_input {
-  width: 150px;
+  width: 95%;
   font-size: 1rem;
   border: none;
   outline: none;
