--- a/src/components/WithoutContext/UserInfoInputModal/index.css
+++ b/src/components/WithoutContext/UserInfoInputModal/index.css
@@ -51,6 +51,11 @@
 .avatar_imageBox:active {
   filter: brightness(1);
 }
+
+.name_label_wrapper {
+  margin: 10px 0 10px;
+}
+
 .name_label {
   color: #293677;
 }
@@ -65,8 +70,7 @@
 }
 
 .submit_button {
-  margin: 40px 0 0;
-  width: 80px;
+  margin: 40px 0 -40px;
   height: 40px;
   font-size: 1.1rem;
   color: white;
