--- a/src/components/WithoutContext/TypingStatisticsModal/index.css
+++ b/src/components/WithoutContext/TypingStatisticsModal/index.css
@@ -1,8 +1,10 @@
 .modal_overlay.statistics .modal {
   width: 800px;
+  height: 500px;
 }
 
 .statistics_wrapper {
+  position: relative;
   margin: 0 auto;
   width: 100%;
   height: 80%;
@@ -13,7 +15,6 @@
 .button_wrapper {
   display: flex;
   width: 100%;
-  margin-bottom: -1px;
 }
 
 .select_mode_button {
@@ -34,16 +35,36 @@
   }
 }
 
+.statistics_table_header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  font-size: 10pt;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 10px;
+  background-color: #eef1ff;
+  z-index: 99;
+}
 .statistics_table {
+  position: sticky;
+  top: 0;
+  left: 0;
   width: 100%;
   font-size: 10pt;
-  margin: 10px auto;
+  margin: 0 auto;
   border-collapse: collapse;
   border-spacing: 10px;
 }
+.theader {
+  background-color: blue;
+}
 
-.statistics_table th,
+.statistics_table_header th,
 .statistics_table td {
+  width: 100px;
   padding: 12px;
   text-align: center;
   border-bottom: 1px solid #ddd;
@@ -52,15 +73,6 @@
 .statistics_table th {
   font-weight: bold;
   color: #333;
-}
-
-.statistics_table th:nth-child(2) {
-  width: 150px;
-}
-.statistics_table th:nth-child(3),
-.statistics_table th:nth-child(4),
-.statistics_table th:nth-child(6) {
-  width: 80px;
 }
 
 .text_wrapper {
