--- a/src/components/AcidRain/AcidRainStatisticsModal/index.css
+++ b/src/components/AcidRain/AcidRainStatisticsModal/index.css
@@ -20,7 +20,6 @@
   width: 100%;
   height: 75%;
   padding-top: 0;
-
   overflow: scroll;
 }
 
@@ -84,6 +83,7 @@
 }
 
 .acid_rain_statistics_title {
+  z-index: 100;
   position: absolute;
   top: 20px;
   font-size: 26px;
