--- a/src/components/WithContext/VirtualKeyboard/index.css
+++ b/src/components/WithContext/VirtualKeyboard/index.css
@@ -1,6 +1,6 @@
 .virtual_keyboard {
   width: 100%;
-  height: 90%;
+  height: 58%;
   display: flex;
   justify-content: center;
 }
@@ -20,6 +20,7 @@
 .keyboard_wrapper {
   position: relative;
   width: 90%;
+  padding: 20px;
   margin-bottom: 5vh;
   border: 1px solid #b1b2ff;
   border-radius: 10px;
